# desafio-Dio

./: README.md  desafio-p1.py  desafio.py  desafio2.py  ex.py
Data-hora-fuso/: d1.py  d2.py
decoradores/: ex1.py
desafios-challenges/: desafio01.py  desafio02.py  desafio03.py
desafios-py/: desafio-bank.py
iteradores-geradores/: geradores.py  iteradores.py
manipulando_arq/: boas_praticas.py  example.txt  manager.py  manager2.py  open_close.py  teste.txt  tratamento.py  users.csv
python db API/: 1_dbapi.py  2_boas_praticas.py  3_gerenciar_transacoes.py  my_bank.db
store_api-main/: pyproject.toml
workoutapi/: Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
workoutapi/workoutapi/: app.py  docker-compose.yml  main.py  routers.py
workoutapi/workoutapi/atleta/: controller.py  models.py  schemas.py
workoutapi/workoutapi/categorias/: controller.py  models.py  schemas.py
workoutapi/workoutapi/centro_treinamento/: controller.py  models.py  schemas.py
workoutapi/workoutapi/configs/: database.py  settings.py
workoutapi/workoutapi/contrib/: models.py  schemas.py
workoutapi/workoutapi/contrib/repository/: models.py
