[tool.poetry]
name = "workoutapi"
version = "0.1.0"
description = "FastAPI"
authors = ["Sérgio Freire"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
uvicorn = "^0.30.1"
pydantic = "^2.7.4"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
